--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+    /* margin: 10px 50px;
+    padding: 0; */
+    background-color: black;
+}
